--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
+    <li><a href="#!/view1">Athletes List</a></li>
+    <li><a href="#!/view2">Add an Athlete</a></li>
   </ul>
 
   <!--[if lt IE 7]>
